agregue el favicon

--- a/index.html
+++ b/index.html
@@ -7,6 +7,8 @@
     <title>Merakitrenzas - Stand de Trenzas Profesional</title>
     <meta name="description"
         content="Servicios profesionales de peinados con trenzas para eventos infantiles y público en general. By Julieta Vladislavic Arguello.">
+    <link rel="icon" href="favicon.png" type="image/png">
+    <link rel="shortcut icon" href="favicon.png" type="image/png">
 
     <!-- Google Fonts -->
     <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@300;500;700&family=Roboto&display=swap"
@@ -218,8 +220,8 @@
             <div class="contacto-contenido">
                 <div class="contacto-info">
                     <p><i class="fab fa-whatsapp"></i> Teléfono / WhatsApp: <strong>11 7631-8263</strong></p>
-                    <p><i class="fab fa-instagram"></i> Instagram: <a href="https://www.instagram.com/trenzasmerakii_/" target="_blank"
-                            rel="noopener">@trenzasmeraki</a></p>
+                    <p><i class="fab fa-instagram"></i> Instagram: <a href="https://www.instagram.com/trenzasmerakii_/"
+                            target="_blank" rel="noopener">@trenzasmeraki</a></p>
                     <p><i class="fas fa-envelope"></i> Email: <a
                             href="mailto:vladislavicailen@gmail.com">vladislavicailen@gmail.com</a></p>
                     <p><i class="fas fa-map-marker-alt"></i> Ubicación: Buenos Aires, Argentina</p>
@@ -268,7 +270,8 @@
                 <div class="footer-social">
                     <a href="https://wa.me/541176318263" target="_blank" rel="noopener"><i
                             class="fab fa-whatsapp"></i></a>
-                    <a href="https://www.instagram.com/trenzasmerakii_/" target="_blank" rel="noopener"><i class="fab fa-instagram"></i></a>
+                    <a href="https://www.instagram.com/trenzasmerakii_/" target="_blank" rel="noopener"><i
+                            class="fab fa-instagram"></i></a>
                 </div>
             </div>
             <div class="footer-copyright">
