agregue verificacion para google

--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
         content="Servicios profesionales de peinados con trenzas para eventos infantiles y público en general. By Julieta Vladislavic Arguello.">
     <link rel="icon" href="favicon.png" type="image/png">
     <link rel="shortcut icon" href="favicon.png" type="image/png">
-
+    <meta name="google-site-verification" content="yBeCguirkfT2LUOq-2sZaJmxeg7IjqZjqnZaLueLiSg" />
     <!-- Google Fonts -->
     <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@300;500;700&family=Roboto&display=swap"
         rel="stylesheet">
@@ -288,3 +288,4 @@
 </body>
 
 </html>
+
